--- a/Locadora/FrontEnd/Login.html
+++ b/Locadora/FrontEnd/Login.html
@@ -21,6 +21,9 @@
             <button>Login</button>
 
         </form>
+        <div id="aviso" style="display: none;">
+            <p class="mensagem" id="mensagem"></p>
+        </div>
 
     </div>
 
